--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
 Django==5.1.1
+django-cors-headers==4.4.0
 django-rest-authtoken==2.1.4
 djangorestframework==3.15.2
 psycopg2-binary==2.9.9
